// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yields.utils getVaultYieldProjection returns a yield projection estimation from given inputs 1`] = `
Object {
  "harvestApr": 23.564030131826737,
  "harvestPeriodApr": 22.787193973634643,
  "harvestPeriodApy": 22.787193973634643,
  "harvestPeriodSources": Array [
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "apr": 22.787193973634643,
      "balance": 0.0044,
      "decimals": 8,
      "name": "Wrapped Bitcoin",
      "symbol": "WBTC",
      "value": 2.42,
    },
  ],
  "harvestPeriodSourcesApy": Array [
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "apr": 22.787193973634643,
      "balance": 0.0044,
      "decimals": 8,
      "name": "Wrapped Bitcoin",
      "symbol": "WBTC",
      "value": 2.42,
    },
  ],
  "harvestTokens": Array [
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "apr": 23.564030131826737,
      "balance": 0.0091,
      "decimals": 8,
      "name": "Wrapped Bitcoin",
      "symbol": "WBTC",
      "value": 5.005,
    },
  ],
  "harvestValue": 5.005,
  "nonHarvestApr": 12,
  "nonHarvestApy": 17,
  "nonHarvestSources": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
    Object {
      "apr": 4,
      "boostable": false,
      "maxApr": 4,
      "minApr": 4,
      "name": "Badger",
    },
    Object {
      "apr": 6,
      "boostable": true,
      "maxApr": 12,
      "minApr": 3,
      "name": "Boosted Badger",
    },
  ],
  "nonHarvestSourcesApy": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
    Object {
      "apr": 4,
      "boostable": false,
      "maxApr": 4,
      "minApr": 4,
      "name": "Badger",
    },
    Object {
      "apr": 6,
      "boostable": true,
      "maxApr": 12,
      "minApr": 3,
      "name": "Boosted Badger",
    },
    Object {
      "apr": 5,
      "boostable": false,
      "maxApr": 5,
      "minApr": 5,
      "name": "Vault Flywheel",
    },
  ],
  "yieldApr": 23.822975517890768,
  "yieldPeriodApr": 22.787193973634643,
  "yieldPeriodSources": Array [
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "apr": 22.787193973634643,
      "balance": 0.0044,
      "decimals": 8,
      "name": "Wrapped Bitcoin",
      "symbol": "WBTC",
      "value": 2.42,
    },
  ],
  "yieldTokens": Array [
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "apr": 23.822975517890768,
      "balance": 0.0092,
      "decimals": 8,
      "name": "Wrapped Bitcoin",
      "symbol": "WBTC",
      "value": 5.06,
    },
  ],
  "yieldValue": 5.06,
}
`;

exports[`yields.utils getYieldSources returns only passive yield sources for a discontinued vault 1`] = `
Object {
  "apr": 2,
  "apy": 2,
  "nonHarvestSources": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
  ],
  "nonHarvestSourcesApy": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
  ],
  "sources": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
  ],
  "sourcesApy": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
  ],
}
`;

exports[`yields.utils getYieldSources returns vault yield sources categorized by required breakdown 1`] = `
Object {
  "apr": 22,
  "apy": 31,
  "nonHarvestSources": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
    Object {
      "apr": 4,
      "boostable": false,
      "maxApr": 4,
      "minApr": 4,
      "name": "Badger",
    },
    Object {
      "apr": 6,
      "boostable": true,
      "maxApr": 12,
      "minApr": 3,
      "name": "Boosted Badger",
    },
  ],
  "nonHarvestSourcesApy": Array [
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
    Object {
      "apr": 4,
      "boostable": false,
      "maxApr": 4,
      "minApr": 4,
      "name": "Badger",
    },
    Object {
      "apr": 6,
      "boostable": true,
      "maxApr": 12,
      "minApr": 3,
      "name": "Boosted Badger",
    },
    Object {
      "apr": 5,
      "boostable": false,
      "maxApr": 5,
      "minApr": 5,
      "name": "Vault Flywheel",
    },
  ],
  "sources": Array [
    Object {
      "apr": 7,
      "boostable": false,
      "maxApr": 7,
      "minApr": 7,
      "name": "Vault Compounding",
    },
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
    Object {
      "apr": 7,
      "boostable": false,
      "maxApr": 7,
      "minApr": 7,
      "name": "Badger",
    },
    Object {
      "apr": 6,
      "boostable": true,
      "maxApr": 12,
      "minApr": 3,
      "name": "Boosted Badger",
    },
  ],
  "sourcesApy": Array [
    Object {
      "apr": 11,
      "boostable": false,
      "maxApr": 11,
      "minApr": 11,
      "name": "Vault Compounding",
    },
    Object {
      "apr": 2,
      "boostable": false,
      "maxApr": 2,
      "minApr": 2,
      "name": "LP Fees",
    },
    Object {
      "apr": 7,
      "boostable": false,
      "maxApr": 7,
      "minApr": 7,
      "name": "Badger",
    },
    Object {
      "apr": 6,
      "boostable": true,
      "maxApr": 12,
      "minApr": 3,
      "name": "Boosted Badger",
    },
    Object {
      "apr": 5,
      "boostable": false,
      "maxApr": 5,
      "minApr": 5,
      "name": "Vault Flywheel",
    },
  ],
}
`;

exports[`yields.utils loadVaultEventPerformances requests a standard vault provides evaluated yield data 1`] = `
Array [
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 35.60510958199629,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 35.60510958199629,
    "minApr": 35.60510958199629,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 42.400214408917016,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 42.400214408917016,
    "minApr": 42.400214408917016,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 5.066653938749202,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_distribution_badger_vested_escrow_convex_token_flat",
    "maxApr": 5.066653938749202,
    "minApr": 5.066653938749202,
    "name": "Badger Vested Escrow Convex Token",
    "type": "distribution",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 0.05808693216719956,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_flywheel_vault_flywheel_flat",
    "maxApr": 0.05808693216719956,
    "minApr": 0.05808693216719956,
    "name": "Vault Flywheel",
    "type": "flywheel",
  },
]
`;

exports[`yields.utils loadVaultGraphPerformances requests an influence vault throws a bad request 1`] = `
Array [
  YieldSource {
    "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "apr": 0,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 0,
    "minApr": 0,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "apr": 0,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 0,
    "minApr": 0,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "apr": 9.780451982747769,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_distribution_badger_vested_escrow_convex_token_flat",
    "maxApr": 9.780451982747769,
    "minApr": 9.780451982747769,
    "name": "Badger Vested Escrow Convex Token",
    "type": "distribution",
  },
  YieldSource {
    "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "apr": 0.9273166679709072,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_distribution_badger_flat",
    "maxApr": 0.9273166679709072,
    "minApr": 0.9273166679709072,
    "name": "Badger",
    "type": "distribution",
  },
  YieldSource {
    "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "apr": 1.7013912874067607,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_distribution_badger_sett_convex_crv_flat",
    "maxApr": 1.7013912874067607,
    "minApr": 1.7013912874067607,
    "name": "Badger Sett Convex CRV",
    "type": "distribution",
  },
  YieldSource {
    "address": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "apr": 0.17357427433375855,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_flywheel_vault_flywheel_flat",
    "maxApr": 0.17357427433375855,
    "minApr": 0.17357427433375855,
    "name": "Vault Flywheel",
    "type": "flywheel",
  },
]
`;
